update warehouse slots create
