# WMS/apps/api-gateway/src/generated/routes.ts
@@ -397,6 +397,41 @@ export function RegisterRoutes(app: Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsMasterDataController_getAGVsByWarehouseId: Record<string, TsoaRoute.ParameterSchema> = {
+                warehouseId: {"in":"path","name":"warehouseId","required":true,"dataType":"string"},
+        };
+        app.get('/master-data/warehouses/:warehouseId/agvs',
+            ...(fetchMiddlewares<RequestHandler>(MasterDataController)),
+            ...(fetchMiddlewares<RequestHandler>(MasterDataController.prototype.getAGVsByWarehouseId)),
+
+            async function MasterDataController_getAGVsByWarehouseId(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsMasterDataController_getAGVsByWarehouseId, request, response });
+
+                const container: IocContainer = typeof iocContainer === 'function' ? (iocContainer as IocContainerFactory)(request) : iocContainer;
+
+                const controller: any = await container.get<MasterDataController>(MasterDataController);
+                if (typeof controller['setStatus'] === 'function') {
+                controller.setStatus(undefined);
+                }
+
+              await templateService.apiHandler({
+                methodName: 'getAGVsByWarehouseId',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         const argsMasterDataController_getSlotsByWarehouseId: Record<string, TsoaRoute.ParameterSchema> = {
                 idOrCode: {"in":"path","name":"idOrCode","required":true,"dataType":"string"},
         };
