# WMS/apps/api-gateway/src/generated/swagger.json
@@ -659,6 +659,38 @@
 				]
 			}
 		},
+		"/master-data/warehouses/{warehouseId}/agvs": {
+			"get": {
+				"operationId": "GetAGVsByWarehouseId",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Master Data"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "warehouseId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/master-data/warehouses/{idOrCode}/slots": {
 			"get": {
 				"operationId": "GetSlotsByWarehouseId",
